# socklink

./: .gitignore  CHANGELOG.md  LICENSE.txt  README.md  conftest.py  dev-requirements.txt  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  socklink.sh  tsock.sh
.github/workflows/: ci.yml  lint-and-test.yml  lint.yml  periodic.yml  release.yml  sourcehut.yml  test-macos.yml  test-ubuntu.yml  test.yml
cfg.bin/: tmux_feature.sh  tsock.sh
scripts/: deploy_sdf.sh  format.sh  lint.sh  pip-compile.sh  release.py  srht.py  test.sh  upload.sh
scripts/manifests/: alpine.yml  archlinux.txt  debian.yml  fedora.txt  freebsd.txt  netbsd.yml  openbsd.txt
scripts/srht_manifests/: alpine.yml  archlinux.yml  debian.yml  fedora.yml  freebsd.yml  netbsd.yml  openbsd.yml
tests/: plugin.py  test_foo.py  test_integration.py  test_socklink.py  test_testlib.py  test_tsock.py  test_unit.py  testlib.py
