[project]
name = "socklink-tests"
version = "0.1"
description = "Integration tests for socklink.sh"
requires-python = ">=3.11"
dependencies = [
    "pexpect>=4.9.0",
    "pytest>=8.4.1",
    "pytest-retry>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "gql[aiohttp]>=4.0.0",
    "jinja2>=3.1.6",
    "pip-tools>=7.5.0",
    "ruff>=0.12.9",
]
